--- a/index.html
+++ b/index.html
@@ -24,20 +24,22 @@
       <!-- search section -->
       <div class="col-3 search">
         <h4>Search</h4>
-      
-      
         <!-- search for city form-->
-        <div class="search-input">
-
-          <input type="text" class="form-control" id="cityInput" placeholder="Name of City">
-          <button class="btn" type="button" id="searchButton"></button>
-
-          <!-- search history -->
-          <div >
-
+        <form class="form-inline">
+          <div class="input-group mb-3">
+            <input type="text" class="form-control" id="city-input" placeholder="Name of City">
+            <div class="input-group-append">
+              <button class="btn btn-outline-secondary" type="button"><i class="fas fa-search"></i></button>
+            </div>
           </div>
+        </form>
+
+        <!-- search history -->
+        <div >
+          search history
         </div>
       </div>
+
       <!-- weather details section -->
       <div class="col-9">
         <div class="card" id="currentWeather">
@@ -81,6 +83,8 @@
   
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script src="https://kit.fontawesome.com/70fcd40144.js" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
   <script src="./assets/js/script.js"></script>
 </body>
 </html>
