city is displayed when calling cityWeatherSearch in console. Need to add click event handler to the search button to place the search input on the DOM element

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
       <div class="col-3 search-col">
         <h4>Search</h4>
         <!-- search for city form-->
-        <form class="form-inline">
+        <form id="citySearch" class="form-inline">
           <div class="input-group mb-3">
             <input type="text" class="form-control" id="city-search-input" placeholder="Name of City">
             <div class="input-group-append">
-              <button class="btn btn-outline-secondary" type="button"><i class="fas fa-search"></i></button>
+              <button id="search-button" class="btn btn-outline-secondary" type="submit"><i class="fas fa-search"></i></button>
             </div>
           </div>
         </form>
