--- a/index.html
+++ b/index.html
@@ -44,13 +44,9 @@
 
       <!-- weather details section -->
       <div class="col-9">
-        <div class="row city-and-date" id="currentWeather">
-          <span>
-            <h2 id="searchCity"></h2><h2 id="todaysDate"></h2>
-          </span>
-          <!-- <img src="https://openweathermap.org/img/wn/04n@2x.png"> -->
-          <div id="current-weather-container">
-          </div>
+        <div class="row" id="current-weather-container">
+
+          
         </div>
         <div class="row">
           <div id="fiveDayForecastContainer" class="col-9">
