started on 5-day forecast section. date working correctly

--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
         </div>
         <div class="row">
           <div id="fiveDayForecastContainer" class="col-9">
-            forecastWeather div
             <div id="fiveDayForecastCardsContainer">
-              forecastCardsContainer
+              <!-- forecastCardsContainer -->
               <div class="row" id="fiveDayForecastCards">
                 <div id="forecastCard1" class="card-body">
                   <p>forecastCard1</p>
@@ -60,35 +59,7 @@
                   <p>forecastIcon</p>
                   <p>temperature</p>
                   <p>humidity</p>
-                </div>
-                <div id="forecastCard2" class="card-body">
-                  <p>forecastCard2</p>
-                  <p>date</p>
-                  <p>forecastIcon</p>
-                  <p>temperature</p>
-                  <p>humidity</p>
-                </div>
-                <div id="forecastCard3" class="card-body">
-                  <p>forecastCard3</p>
-                  <p>date</p>
-                  <p>forecastIcon</p>
-                  <p>temperature</p>
-                  <p>humidity</p>
-                </div>
-                <div id="forecastCard4" class="card-body">
-                  <p>forecastCard4</p>
-                  <p>date</p>
-                  <p>forecastIcon</p>
-                  <p>temperature</p>
-                  <p>humidity</p>
-                </div>
-                <div id="forecastCard5" class="card-body">
-                  <p>forecastCard5</p>
-                  <p>date</p>
-                  <p>forecastIcon</p>
-                  <p>temperature</p>
-                  <p>humidity</p>
-                </div>
+
               </div>
             </div>
           </div>
