added weather icon

--- a/index.html
+++ b/index.html
@@ -51,14 +51,8 @@
         <div class="row">
           <div id="fiveDayForecastContainer" class="col-9">
             <div id="fiveDayForecastCardsContainer">
-              <!-- forecastCardsContainer -->
-              <div class="row" id="fiveDayForecastCards">
-                <div id="forecastCard1" class="card-body">
-                  <p>forecastCard1</p>
-                  <p>date</p>
-                  <p>forecastIcon</p>
-                  <p>temperature</p>
-                  <p>humidity</p>
+              <div class="row">
+
 
               </div>
             </div>
