finally got card-group to stay under heading

--- a/index.html
+++ b/index.html
@@ -42,24 +42,26 @@
         </div>
       </div>
 
-      <!-- weather details section -->
+      <!-- current weather details section -->
       <div class="col-9">
         <div class="row" id="current-weather-container">
-
           
+
         </div>
-        <div class="row">
-          <div id="fiveDayForecastContainer" class="col-9">
-            <div id="fiveDayForecastCardsContainer">
-              <div class="row">
+        <div class="row list-group" id="current-weather-details">
 
+        </div>
 
-              </div>
-            </div>
+        <!-- 5-day forecast section -->
+        <div class="row" id="five-day-forecast-container">
+          <h2 class="col-12" id="five-day-forecast-header"></h2>
+          <div id="five-day-forecast-cards">
+
           </div>
         </div>
-
       </div>
+
+
 
     </div>
 
