finally got card-group to stay under heading..again

--- a/index.html
+++ b/index.html
@@ -44,8 +44,14 @@
 
       <!-- current weather details section -->
       <div class="col-9">
-        <div class="row" id="current-weather-container">
-          
+        <div class="row">
+          <div id="current-weather-container">
+            <div class="col-12">
+              <h2 id="city-search-input">
+                
+              </h2>
+            </div>
+          </div>
 
         </div>
         <div class="row list-group" id="current-weather-details">
