city-date-icon now aligned appropriately

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 
         </div>
         <div class="row list-group" id="current-weather-details">
+          <div class="col-12" id="city-date-icon">
+            
+          </div>
 
         </div>
 
