--- a/index.html
+++ b/index.html
@@ -47,33 +47,23 @@
         <div class="row">
           <div id="current-weather-container">
             <div class="col-12">
-              <h2 id="city-search-input">
-                
-              </h2>
+              <h2 id="city-search-input"></h2>
             </div>
           </div>
-
         </div>
         <div class="row list-group" id="current-weather-details">
           <div class="col-12" id="city-date-icon">
-            
           </div>
-
         </div>
 
         <!-- 5-day forecast section -->
         <div class="row" id="five-day-forecast-container">
           <h2 class="col-12" id="five-day-forecast-header"></h2>
           <div id="five-day-forecast-cards">
-
           </div>
         </div>
       </div>
-
-
-
     </div>
-
   </div>
 
   
