added css around UV Index. add div to house search history buttons. made history buttons prepend so latest search was at the top.

--- a/index.html
+++ b/index.html
@@ -26,19 +26,18 @@
         <h4>Search for a City:</h4>
         <!-- search for city form-->
         <form id="citySearchForm" class="form-inline">
-          <div class="input-group mb-3">
+          <!-- <div class="input-group mb-3"> -->
             <input type="text" class="form-control" id="city-search-input" placeholder="Name of City">
-            <div class="input-group-append">
-              <!-- <button id="search-button" class="btn btn-outline-secondary" type="submit"><i class="fas fa-search"></i></button> -->
-              <button id="search-button" class="btn btn-outline-secondary" type="submit" onclick="getCityWeather()"><i class="fas fa-search"></i></button>
-            </div>
-          </div>
+            <!-- <div class="input-group-append"> -->
+              <button id="search-button" class="btn btn-outline-secondary" type="submit"><i class="fas fa-search"></i></button>
+              <!-- <button id="search-button" class="btn btn-outline-secondary" type="submit" onclick="getCityWeather()"><i class="fas fa-search"></i></button> -->
+            <!-- </div>
+          </div> -->
         </form>
 
         <!-- search history -->
-        <div id="search-history">
-          search history
-          <!-- TODO: if there are records in localStorage, then create a button for each key/value pair -->
+        <div id="search-history" >
+         
         </div>
       </div>
 
@@ -73,7 +72,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
   <script src="./assets/js/script.js"></script>
 </body>
-<footer class="row">
+<footer>
   footer
 </footer>
 </html>
