cleanup, added comments. ready for final push

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <!-- search section -->
       <div class="col-3 search" id="search-col">
         <h4>Search for a City:</h4>
+
         <!-- search for city form-->
         <form id="citySearchForm" class="form-inline">
           <div class="input-group mb-3">
@@ -57,10 +58,10 @@
         <!-- 5-day forecast section -->
         <div class="row" id="five-day-forecast-container">
           <h2 class="col-12" id="five-day-forecast-header"></h2>
-          <div class=".bg-secondary" id="five-day-forecast-cards">
-          </div>
+          <div class=".bg-secondary" id="five-day-forecast-cards"></div>
         </div>
       </div>
+
     </div>
   </div>
 
